chandeliers-lus/tests/fail/ui/tc/const/fby.rs
chandeliers_lus::decl! {
    const X : int = 0 fby 1 fby 2;
}

fn main() {}
