chandeliers-lus/tests/fail/ui/tc/const/fby.stderr
error: Later is not valid in const contexts
 --> tests/fail/ui/tc/const/fby.rs:2:21
  |
2 |     const X : int = 0 fby 1 fby 2;
  |                     ^^^^^^^^^^^^^
